<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_drawerlayout2"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
     >

    <LinearLayout
        android:id="@+id/ll_device_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Device address: "
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp" 
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_device_address"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Device name: "
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_device_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_device_name"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="State："
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/connect_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_device_state"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/buttonborder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/wipe_cache"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_notify"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/buttonborder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/disnotify"
            android:textColor="#fff"
            android:textSize="18sp" />
        
        <Button
            android:id="@+id/test_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/buttonborder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="指令测试"
            android:textColor="#fff"
            android:textSize="18sp" />
        
        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/buttonborder"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="清屏"
            android:textColor="#fff"
            android:textSize="18sp" />

        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/timing_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_button"
        >
        <ToggleButton
            android:id="@+id/mTogBtn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/toggle_btn"
            android:checked="false"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:id="@+id/tv_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timingStr"
            android:textColor="#fff"
            android:textSize="18sp" 
            />
        
        <EditText 
            android:id="@+id/time_num_et"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/edittext_border"
            android:textColor="@color/white"
            android:text = "1000"
            android:inputType="number"
            />
        
         <TextView
            android:id="@+id/time_unit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ms"
            android:textColor="#fff"
            android:textSize="18sp" 
            />
        
    </LinearLayout>
    

    <LinearLayout
        android:id="@+id/ll_data_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timing_ll"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="数据接收区(侧滑查看详情)："
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=" clear"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/rev_sv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@id/ll_data_title"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/rev_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="18sp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_button"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/password_prompt"
            android:textColor="#000"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_border"
            android:hint="password"
            android:padding="8dp"
            android:inputType="textPassword"
            android:textColor="#000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

           

            <Button
                android:id="@+id/btn_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/buttonborder"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/confirm"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_button"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:text="请输入信息"
            android:textColor="#000"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
             android:visibility="visible"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/service_company"
                android:textColor="#000"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/car_infos"
                android:textColor="#000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:hint="car plate"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_margin="10dp"
              android:visibility="visible"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/driver_infos"
                android:textColor="#000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               
                android:background="@drawable/edittext_border"
                android:hint="driver id"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
            android:orientation="horizontal" >

            

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/buttonborder"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/confirm"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/switch_btn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/buttonborder"
            android:text="切换"
            android:textColor="#fff"
            android:textSize="20sp"
             />

        <EditText
            android:id="@+id/send_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:background="@drawable/edittext_border_white"
            android:padding="8dp"
            android:textColor="#fff"
            android:textSize="18sp"
            android:typeface="normal" 
            
            />
        
        <com.xw.bluetooth.views.InstructInputView
            android:id="@+id/send_instruct_iiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="16"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/buttonborder"
            android:text="@string/send_str"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>

    
    <LinearLayout
			android:id="@+id/id_linearlayout2"
			android:layout_width="240dp"
			android:layout_height="match_parent"
			android:layout_gravity="start"
			android:background="#45b97c"
			android:orientation="vertical" >

			<ListView
				android:id="@+id/id_lv"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:divider="#CD853F"
				android:visibility="gone"
				android:dividerHeight="2dp" >
			</ListView>
		
			
		</LinearLayout>

</android.support.v4.widget.DrawerLayout>